2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-10-26  Andreas Kupries  <andreask@activestate.com>

	* graphops.man: [Bug 3090738]: Fixed typo in command names.

2010-10-05  Andreas Kupries  <andreask@activestate.com>

	* list.tcl (::struct::list::Lshuffle): New command, shuffling a
	* list.test: list into random order. Bumped version to 1.8.
	* struct_list.man: Extended testsuite, updated documentation.
	* pkgIndex.tcl: Removed the backward compatibility implementation
	  of 'lset' from code and tests and bumped the runtime
	  requirements to Tcl 8.4.

2010-09-10  Andreas Kupries  <andreask@activestate.com>

	* queue_oo.tcl: Established minimum requirements for TclOO
	* stack_oo.tcl: to support the two classes. Bug 3062782 was
	  a very old TclOO (0.3) interfering in the test.

2010-09-09  Andreas Kupries  <andreask@activestate.com>

	* graph/tests/ops/adjmatrix.test: Converted to tcltest v2 for
	* graph/tests/ops/components.test: proper independence of the
	* graph/tests/ops/componentof.test: tests. Preparation for
	* graph/tests/ops/bipartite.test: the investigation of Bug
	* graph/tests/ops/kruskal.test: 3062782.
	* graph/tests/ops/prim.test:
	* graph/tests/ops/tarjan.test:

2010-05-25  Andreas Kupries  <andreask@activestate.com>

	* queue.testsuite: Fixed bug in C implementation of 'unget'.
	* queue/m.c: Used bogus variable in assert, hit only when trying
	* ../tcllibc.tcl: to reuse a list Tcl_Obj for the unget
	  buffer. Tcllibc version bumped to 0.3.9. Testsuite extended.

2010-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph/arcshimmer.c: Squash a number of warnings in the C
	* graph/methods.c: implementations of graph, sets, and trees,
	* graph/nodeshimmer.c: using casts, and including missing
	* sets/s.c: headers.
	* tree/m.c:
	* tree/shimmer.c:
	* tree/walk.c:

	* stack_oo.tcl: Remove superfluous 'package require'. Handled by