@@ -1,3 +1,8 @@
+2011-09-17  Michael Schlenker <mic42@users.sourceforge.ner>
+        
+	* list.tcl: [Bug 3308051]: Fixed noncommutative equal check
+	* list.test:
+
 2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
